--- a/HotelFrontdesk/src/AppBundle/Resources/views/about.html.twig
+++ b/HotelFrontdesk/src/AppBundle/Resources/views/about.html.twig
@@ -13,7 +13,7 @@
                 <div class="collapse navbar-collapse navbar-light" id="navbarsExample05">
                     <ul class="navbar-nav ml-auto pl-lg-5 pl-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="{{ path('index') }}">Home</a>
+                            <a class="nav-link" href="{{ path('index') }}">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="{{ path('rooms') }}" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rooms</a>
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="{{ path('blog') }}">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('about') }}">About</a>
+                            <a class="nav-link active" href="{{ path('about') }}">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('contact') }}">Contact</a>
@@ -46,15 +46,14 @@
     </header>
     <!-- END header -->
 
-    <section class="site-hero overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/images/big_image_1.jpg') }});">
+    <section class="site-hero site-hero-innerpage overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/images/big_image_1.jpg')}});">
         <div class="container">
             <div class="row align-items-center site-hero-inner justify-content-center">
                 <div class="col-md-12 text-center">
 
                     <div class="mb-5 element-animate">
-                        <h1>Welcome To Our Luxury Rooms</h1>
+                        <h1>About Luxury Hotel</h1>
                         <p>Discover our world's #1 Luxury Room For VIP.</p>
-                        <p><a href="{{ path('booknow') }}" class="btn btn-primary">Book Now</a></p>
                     </div>
 
                 </div>
@@ -67,11 +66,15 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
-                    <div class="heading-wrap text-center element-animate">
+                    <div class="heading-wrap  element-animate">
                         <h4 class="sub-heading">Stay with our luxury rooms</h4>
-                        <h2 class="heading">Stay and Enjoy</h2>
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus illo similique natus, a recusandae? Dolorum, unde a quibusdam est? Corporis deleniti obcaecati quibusdam inventore fuga eveniet! Qui delectus tempore amet!</p>
-                        <p><a href="#" class="btn btn-primary btn-sm">More About Us</a></p>
+                        <h2 class="heading">Our Story</h2>
+                        <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus illo similique natus, a recusandae? Dolorum, unde a quibusdam est? Corporis deleniti obcaecati quibusdam inventore fuga eveniet! Qui delectus tempore amet!</p>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus illo similique natus, a recusandae? Dolorum, unde a quibusdam est? Corporis deleniti obcaecati quibusdam inventore fuga eveniet! Qui delectus tempore amet!</p>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus illo similique natus, a recusandae? Dolorum, unde a quibusdam est? Corporis deleniti obcaecati quibusdam inventore fuga eveniet! Qui delectus tempore amet!</p>
+
                     </div>
                 </div>
                 <div class="col-md-1"></div>
@@ -83,133 +86,64 @@
     </section>
     <!-- END section -->
 
+
+
+
+
     <section class="site-section bg-light">
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-12 heading-wrap text-center">
-                    <h4 class="sub-heading">Our Luxury Rooms</h4>
-                    <h2 class="heading">Featured Rooms</h2>
+                    <h4 class="sub-heading">Our Kind Staff</h4>
+                    <h2 class="heading">Our Staff</h2>
                 </div>
             </div>
             <div class="row ">
-                <div class="col-md-7">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/images/img_1.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
+                <div class="col-md-4">
+                    <div class="post-entry">
+                        <img src="{{ asset('bundles/app/images/person_1.jpg')}}" alt="Image placeholder" class="img-fluid">
+                        <div class="body-text">
+                            <div class="category">Staff</div>
+                            <h3 class="mb-3"><a href="#">Michelle Aguilar</a></h3>
+                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
+                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read Bio</a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 room-thumbnail-absolute">
-                    <a href="#" class="media d-block room bg first-room" style="background-image: url({{ asset('bundles/app/images/img_2.jpg')}}">
-                        <!-- <figure> -->
-                        <div class="overlap-text">
-                  <span>
-                    Hotel Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            <span class="pricing-from">
-                    from $22
-                  </span>
+                <div class="col-md-4">
+                    <div class="post-entry">
+                        <img src="{{ asset('bundles/app/images/person_2.jpg')}}" alt="Image placeholder" class="img-fluid">
+                        <div class="body-text">
+                            <div class="category">Staff</div>
+                            <h3 class="mb-3"><a href="#">Chris Standworth</a></h3>
+                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
+                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read Bio</a></p>
                         </div>
-                        <!-- </figure> -->
-                    </a>
-
-                    <a href="#" class="media d-block room bg second-room" style="background-image: url({{ asset('bundles/app/images/img_4.jpg')}}">
-                        <!-- <figure> -->
-                        <div class="overlap-text">
-                  <span>
-                    Hotel Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            <span class="pricing-from">
-                    from $22
-                  </span>
-                        </div>
-                        <!-- </figure> -->
-                    </a>
-
+                    </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/images/img_5.jpg')}}">
-        <div class="container">
-            <div class="row justify-content-center align-items-center intro">
-                <div class="col-md-9 text-center element-animate">
-                    <h2>Relax and Enjoy your Holiday</h2>
-                    <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quidem tempore expedita facere facilis, dolores!</p>
-                    <div class="btn-play-wrap"><a href="https://vimeo.com/channels/staffpicks/93951774" class="btn-play popup-vimeo "><span class="ion-ios-play"></span></a></div>
+                <div class="col-md-4">
+                    <div class="post-entry">
+                        <img src="{{ asset('bundles/app/images/person_3.jpg')}}" alt="Image placeholder" class="img-fluid">
+                        <div class="body-text">
+                            <div class="category">Cook</div>
+                            <h3 class="mb-3"><a href="#">Rob McDonald</a></h3>
+                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
+                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read Bio</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- END section -->
 
-    <section class="site-section bg-light">
+    <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/images/img_5.jpg')}});">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-12 heading-wrap text-center">
-                    <h4 class="sub-heading">Our Blog</h4>
-                    <h2 class="heading">Our Recent Blog</h2>
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col-md-4">
-                    <div class="post-entry">
-                        <img src="{{ asset('bundles/app/images/img_3.jpg')}}" alt="Image placeholder" class="img-fluid">
-                        <div class="body-text">
-                            <div class="category">Rooms</div>
-                            <h3 class="mb-3"><a href="#">New Rooms</a></h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
-                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="post-entry">
-                        <img src="{{ asset('bundles/app/images/img_6.jpg')}}" alt="Image placeholder" class="img-fluid">
-                        <div class="body-text">
-                            <div class="category">News</div>
-                            <h3 class="mb-3"><a href="#">New Staff Added</a></h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
-                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="post-entry">
-                        <img src="{{ asset('bundles/app/images/img_5.jpg')}}" alt="Image placeholder" class="img-fluid">
-                        <div class="body-text">
-                            <div class="category">New Rooms</div>
-                            <h3 class="mb-3"><a href="#">Big Rooms for All</a></h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
-                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
-                        </div>
-                    </div>
+            <div class="row justify-content-center align-items-center intro">
+                <div class="col-md-9 text-center element-animate">
+                    <h2>Relax and Enjoy your Holiday</h2>
+                    <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quidem tempore expedita facere facilis, dolores!</p>
+                    <div class="btn-play-wrap"><a href="https://vimeo.com/channels/staffpicks/93951774" class="btn-play popup-vimeo "><span class="ion-ios-play"></span></a></div>
                 </div>
             </div>
         </div>
