--- a/HotelFrontdesk/src/AppBundle/Resources/views/security/register.html.twig
+++ b/HotelFrontdesk/src/AppBundle/Resources/views/security/register.html.twig
@@ -7,21 +7,15 @@
             <div class="row align-items-center site-hero-inner justify-content-center">
                 <div class="col-md-12 text-center">
                     <div class="mb-5 element-animate">
-                        <h1>Login</h1>
+                        <h1>Register</h1>
                     </div>
                     <div class="row">
                         <div class="col-md-4 offset-md-4 text-center">
-                            {% if error %}
-                                <div class="card" style="background-color: #c66b6b">
-                                <div class="card-body" style="color: white">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-
-                                </div>
-                            {% endif %}
-                            <form action="{{ path('login') }}" method="post">
+                            <form action="{{ path('register') }}" method="post">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <label for="email"></label>
-                                        <input type="text" id="username" name="_username" class="form-control" placeholder="mail@hotel.at" value="{{ last_username }}">
+                                        <input type="text" id="username" name="_username" class="form-control" placeholder="mail@hotel.at">
                                     </div>
                                 </div>
                                 <div class="row mb-4">
@@ -32,12 +26,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12 form-group text-center">
-                                        <button type="submit" class="btn btn-primary" style="width: 100%"><i class="fas fa-sign-in-alt"></i> Login</button>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-12 form-group text-left">
-                                        <a href="{{ path('register') }}" style="font-size: medium; color: white">Register Now</a>
+                                        <button type="submit" class="btn btn-primary" style="width: 100%"><i class="fas fa-sign-in-alt"></i> Register</button>
                                     </div>
                                 </div>
                             </form>
