Login and Logout works

--- a/HotelFrontdesk/src/AdminBundle/Resources/views/index.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin.base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
     <section class="site-hero site-hero-innerpage overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/big_image_1.jpg')}});">
