--- a/HotelFrontdesk/src/AppBundle/Resources/views/login.html.twig
+++ b/HotelFrontdesk/src/AppBundle/Resources/views/login.html.twig
@@ -35,11 +35,11 @@
                                         <button type="submit" class="btn btn-primary" style="width: 100%"><i class="fas fa-sign-in-alt"></i> Login</button>
                                     </div>
                                 </div>
-                                <div class="row">
+                                {#<div class="row">
                                     <div class="col-md-12 form-group text-left">
                                         <a href="{{ path('register') }}" style="font-size: medium; color: white">Register Now</a>
                                     </div>
-                                </div>
+                                </div>#}
                             </form>
                         </div>
                     </div>
