--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/form.fields.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/form.fields.html.twig
@@ -7,7 +7,7 @@
 
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" class="form-control" {% if employee is defined %} value="{{ employee.lastName }}" {% endif %}>
+            <input type="email" id="email" name="email" class="form-control" {% if employee is defined %} value="{{ employee.email }}" {% endif %}>
         </div>
 
 
