--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/create.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/create.html.twig
@@ -18,13 +18,18 @@
     <section class="site-section">
         <div class="container">
             <form action="{{ path('employee_create') }}" method="post">
-                {% include '@Admin/Employee/form.fields.html.twig' %}
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary" style="width: 100%"><i
-                                        class="fas fa-save"></i> Save
-                            </button>
+                    <div class="col-md-6 offset-sm-3 text-center">
+
+                        {% include '@Admin/Employee/form.fields.html.twig' %}
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-primary" style="width: 100%"><i
+                                                class="fas fa-save"></i> Save
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
