--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
@@ -44,7 +44,7 @@
                                         <td>{{ employee.email }}</td>
                                         <td>
                                             <div class="dropdown">
-                                                <button class="btn-primary btn-sm text-white" href="{{ path('rooms') }}"
+                                                <button class="btn-primary btn-sm text-white"
                                                    data-toggle="dropdown" aria-haspopup="true"
                                                    aria-expanded="false"><i class="fas fa-caret-down"></i></button>
                                                 <div class="dropdown-menu">
