--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/create.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/create.html.twig
@@ -17,13 +17,14 @@
 
     <section class="site-section">
         <div class="container">
-            <form action="{{ path('employee_create') }}" method="post">
-                <div class="row">
-                    <div class="col-md-6 offset-sm-3 text-center">
-
+            <div class="row">
+                <div class="col-6 offset-sm-3">
+                    <h2 class="mb-5">Create Form</h2>
+                    <form action="{{ path('employee_create') }}" method="post">
                         {% include '@Admin/Employee/form.fields.html.twig' %}
+
                         <div class="row">
-                            <div class="col-md-12 text-center">
+                            <div class="col-md-6">
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-primary" style="width: 100%"><i
                                                 class="fas fa-save"></i> Save
@@ -31,9 +32,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
     </section>
 
