--- a/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
+++ b/HotelFrontdesk/src/AdminBundle/Resources/views/Employee/index.html.twig
@@ -21,12 +21,12 @@
                 <div class="col-md-12">
                     <div class="heading-wrap text-center">
                         <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                            <table id="dataTable" width="100%" cellspacing="0">
                                 <thead>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Address</th>
-                                    <th>E-Mail</th>
+                                    <th class="border-right">Name</th>
+                                    <th class="border-right">Address</th>
+                                    <th class="border-right">E-Mail</th>
                                     <th>
                                         <a href="{{ path('employee_create') }}"><i
                                                     class="fas fa-plus-circle fa-lg"></i></a>
@@ -36,9 +36,9 @@
                                 <tbody>
                                 {% for employee in employees %}
                                     <tr>
-                                        <td>{{ employee.name }}</td>
-                                        <td>{{ employee.address }}</td>
-                                        <td>{{ employee.email }}</td>
+                                        <td class="border-right">{{ employee.name }}</td>
+                                        <td class="border-right">{{ employee.address }}</td>
+                                        <td class="border-right">{{ employee.email }}</td>
                                         <td>
                                             <a href="{{ path('employee_edit', {'id' : employee.id }) }}"><i
                                                         class="fas fa-edit mr-2 fa-lg"></i> </a>
