--- a/HotelFrontdesk/src/AppBundle/Resources/views/about.html.twig
+++ b/HotelFrontdesk/src/AppBundle/Resources/views/about.html.twig
@@ -2,7 +2,7 @@
 {% set page = 'about' %}
 
 {% block body %}
-    <section class="site-hero site-hero-innerpage overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/big_image_1.jpg')}});">
+    <section class="site-hero site-hero-innerpage overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/big_image_1.jpg') }});">
         <div class="container">
             <div class="row align-items-center site-hero-inner justify-content-center">
                 <div class="col-md-12 text-center">
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-7">
-                    <img src="{{ asset('bundles/app/template/images/f_img_1.png')}}" alt="Image placeholder" class="img-md-fluid">
+                    <img src="{{ asset('bundles/app/template/images/f_img_1.png') }}" alt="Image placeholder" class="img-md-fluid">
                 </div>
             </div>
         </div>
@@ -55,9 +55,26 @@
                 </div>
             </div>
             <div class="row ">
+
                 <div class="col-md-4">
                     <div class="post-entry">
-                        <img src="{{ asset('bundles/app/template/images/person_1.jpg')}}" alt="Image placeholder" class="img-fluid">
+                        <img src="{{ asset('bundles/app/template/images/person_3.jpg') }}" alt="Image placeholder" class="img-fluid">
+                        <div class="body-text">
+                            <div class="category">Cook</div>
+                            <h3 class="mb-3"><a href="#">Rob McDonald had a Farm E-I-E-I-O</a></h3>
+                            <p class="mb-4">And on his farm he had a cow
+                                <br> E-I-E-I-O
+                                <br> With a moo moo here
+                                <br> And a moo moo there
+                                <br> Here a moo, there a moo
+                                <br> Everywhere a moo moo</p>
+                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read Bio</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="post-entry">
+                        <img src="{{ asset('bundles/app/template/images/person_1.jpg') }}" alt="Image placeholder" class="img-fluid">
                         <div class="body-text">
                             <div class="category">Staff</div>
                             <h3 class="mb-3"><a href="#">Michelle Aguilar</a></h3>
@@ -68,21 +85,10 @@
                 </div>
                 <div class="col-md-4">
                     <div class="post-entry">
-                        <img src="{{ asset('bundles/app/template/images/person_2.jpg')}}" alt="Image placeholder" class="img-fluid">
+                        <img src="{{ asset('bundles/app/template/images/person_2.jpg') }}" alt="Image placeholder" class="img-fluid">
                         <div class="body-text">
                             <div class="category">Staff</div>
                             <h3 class="mb-3"><a href="#">Chris Standworth</a></h3>
-                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
-                            <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read Bio</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="post-entry">
-                        <img src="{{ asset('bundles/app/template/images/person_3.jpg')}}" alt="Image placeholder" class="img-fluid">
-                        <div class="body-text">
-                            <div class="category">Cook</div>
-                            <h3 class="mb-3"><a href="#">Rob McDonald</a></h3>
                             <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum deserunt illo quis similique dolore voluptatem culpa voluptas rerum, dolor totam.</p>
                             <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Read Bio</a></p>
                         </div>
@@ -93,7 +99,7 @@
     </section>
     <!-- END section -->
 
-    <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/img_5.jpg')}});">
+    <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/img_5.jpg') }});">
         <div class="container">
             <div class="row justify-content-center align-items-center intro">
                 <div class="col-md-9 text-center element-animate">
@@ -107,6 +113,11 @@
     <!-- END section -->
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
+    <div id="loader" class="show fullscreen">
+        <svg class="circular" width="48px" height="48px">
+            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/>
+        </svg>
+    </div>
 
 {% endblock %}
