--- a/HotelFrontdesk/src/AppBundle/Resources/views/rooms.html.twig
+++ b/HotelFrontdesk/src/AppBundle/Resources/views/rooms.html.twig
@@ -2,7 +2,7 @@
 {% set page = 'rooms' %}
 
 {% block body %}
-    <section class="site-hero site-hero-innerpage overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/big_image_1.jpg')}});">
+    <section class="site-hero site-hero-innerpage overlay" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/big_image_1.jpg') }});">
         <div class="container">
             <div class="row align-items-center site-hero-inner justify-content-center">
                 <div class="col-md-12 text-center">
@@ -25,7 +25,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="media d-block room mb-0">
                         <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_2.jpg')}}" alt="Generic placeholder image" class="img-fluid">
+                            <img src="{{ asset('bundles/app/template/images/img_2.jpg') }}" alt="Generic placeholder image" class="img-fluid">
                             <div class="overlap-text">
                   <span>
                     Featured Room
@@ -36,70 +36,21 @@
                             </div>
                         </figure>
                         <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
+                            <h3 class="mt-0"><a href="{{ path('reservation_index') }}">Presidential Room</a></h3>
                             <ul class="room-specs">
                                 <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
                                 <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
                             </ul>
                             <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_3.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_1.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
+                            <p><a href="{{ path('reservation_index') }}" class="btn btn-primary btn-sm">Book Now From $20</a></p>
                         </div>
                     </div>
                 </div>
 
-
                 <div class="col-md-4 mb-4">
                     <div class="media d-block room mb-0">
                         <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_2.jpg')}}" alt="Generic placeholder image" class="img-fluid">
+                            <img src="{{ asset('bundles/app/template/images/img_3.jpg') }}" alt="Generic placeholder image" class="img-fluid">
                             <div class="overlap-text">
                   <span>
                     Featured Room
@@ -110,70 +61,21 @@
                             </div>
                         </figure>
                         <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
+                            <h3 class="mt-0"><a href="{{ path('reservation_index') }}">Classic Room</a></h3>
                             <ul class="room-specs">
                                 <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
+                                <li><span class="ion-ios-crop"></span> 15 m <sup>2</sup></li>
                             </ul>
                             <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_3.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_1.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
+                            <p><a href="{{ path('reservation_index') }}" class="btn btn-primary btn-sm">Book Now From $20</a></p>
                         </div>
                     </div>
                 </div>
 
-
                 <div class="col-md-4 mb-4">
                     <div class="media d-block room mb-0">
                         <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_2.jpg')}}" alt="Generic placeholder image" class="img-fluid">
+                            <img src="{{ asset('bundles/app/template/images/img_1.jpg') }}" alt="Generic placeholder image" class="img-fluid">
                             <div class="overlap-text">
                   <span>
                     Featured Room
@@ -184,61 +86,13 @@
                             </div>
                         </figure>
                         <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
+                            <h3 class="mt-0"><a href="{{ path('reservation_index') }}">Rats Room</a></h3>
                             <ul class="room-specs">
                                 <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
+                                <li><span class="ion-ios-crop"></span> 7 m <sup>2</sup></li>
                             </ul>
                             <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_3.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="media d-block room mb-0">
-                        <figure>
-                            <img src="{{ asset('bundles/app/template/images/img_1.jpg')}}" alt="Generic placeholder image" class="img-fluid">
-                            <div class="overlap-text">
-                  <span>
-                    Featured Room
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                    <span class="ion-ios-star"></span>
-                  </span>
-                            </div>
-                        </figure>
-                        <div class="media-body">
-                            <h3 class="mt-0"><a href="#">Presidential Room</a></h3>
-                            <ul class="room-specs">
-                                <li><span class="ion-ios-people-outline"></span> 2 Guests</li>
-                                <li><span class="ion-ios-crop"></span> 22 ft <sup>2</sup></li>
-                            </ul>
-                            <p>Nulla vel metus scelerisque ante sollicitudin. Fusce condimentum nunc ac nisi vulputate fringilla. </p>
-                            <p><a href="#" class="btn btn-primary btn-sm">Book Now From $20</a></p>
+                            <p><a href="{{ path('reservation_index') }}" class="btn btn-primary btn-sm">Book Now From $20</a></p>
                         </div>
                     </div>
                 </div>
@@ -246,7 +100,7 @@
         </div>
     </section>
 
-    <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/img_5.jpg')}});">
+    <section class="section-cover" data-stellar-background-ratio="0.5" style="background-image: url({{ asset('bundles/app/template/images/img_5.jpg') }});">
         <div class="container">
             <div class="row justify-content-center align-items-center intro">
                 <div class="col-md-9 text-center element-animate">
@@ -260,6 +114,11 @@
     <!-- END section -->
 
     <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
+    <div id="loader" class="show fullscreen">
+        <svg class="circular" width="48px" height="48px">
+            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/>
+        </svg>
+    </div>
 
 {% endblock %}
